first cut project5 implementation python -m project5.project5 > output.txt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.readonlyInclude": {
         "{**/.c4z/.extsrcs/*.PROTSYM.cbl,**/.c4z/.extsrcs/*.PROTSYM.listing}": true
-    }
+    },
+	 "python.terminal.cwd": "${workspaceFolder}/python_practice_hub"
 }
